<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">styleTapp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_write_tag">styleTapp</string>
    <string name="title_activity_read_tag">styleTapp</string>
    <string name="add_new_cloth">New</string>
    <string name="read_cloth">Tap</string>
    <string name="title_activity_main">styleTapp</string>
    <string name="title_activity_add_clothing">styleTapp</string>
    
    <string name="action_settings">Settings</string>
    <string name="caption">Type your caption here (optional)</string>
    <string name="name">Name it (optional)</string>
    <string name="brand">Enter brand (optional)</string>
    <string name="clothingtype1">Accessories</string>  
    <string name="clothingtype2">Jacket</string>  
    <string name="clothingtype3">Pants</string>  
    <string name="clothingtype4">Shirt</string>
    <string name="clothingtype5">Shoes</string>
    <string name="clothingtype6">Sweater</string>
    <string name="clothingtype">Choose type</string>
    <string name="addclothingbutton">Add Clothing</string>
    <string name="goHome">Home</string>
    <string name="writeTag">Tap tag to add!</string>

</resources>